src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__add_series_ui__add_series_ui_tests__tests__snapshot_tests__add_series_ui_AddSeriesSelectLanguageProfile.snap
---
source: src/ui/sonarr_ui/library/add_series_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                            ╭──────────────────────────────────────────  Add Series - Test  ──────────────────────────────────────────╮                              
                     ╭──────│                                        New series blah blah blah                                        │───────╮                      
                     │someth│                                                                                                         │       │                      
                     ╰──────│                                                                                                         │───────╯                      
                     ╭──────│                                                                                                         │───────╮                      
                     │   ✔  │                                                                                                         │       │                      
                     │=>    │                                                                                                         │       │                      
                     │      │                                                  ╭─────────────────────────────────────────────────╮    │       │                      
                     │      │                                     Root Folder: │/nfs                                           ▼ │    │       │                      
                     │      │                                                  ╰─────────────────────────────────────────────────╯    │       │                      
                     │      │                                                  ╭─────────────────────────────────────────────────╮    │       │                      
                     │      │                                         Monitor: │All Episodes                                   ▼ │    │       │                      
                     │      │                                     ╭───────────────────────────────╮──────────────────────────────╯    │       │                      
                     │      │                                     │English                        │──────────────────────────────╮    │       │                      
                     │      │                                 Qual│                               │                            ▼ │    │       │                      
                     │      │                                     │                               │──────────────────────────────╯    │       │                      
                     │      │                                     │                               │──────────────────────────────╮    │       │                      
                     │      │                                Langu│                               │                            ▼ │    │       │                      
                     │      │                                     │                               │──────────────────────────────╯    │       │                      
                     │      │                                     │                               │──────────────────────────────╮    │       │                      
                     │      │                                     │                               │                            ▼ │    │       │                      
                     │      │                                     │                               │──────────────────────────────╯    │       │                      
                     │      │                                     │                               │                                   │       │                      
                     │      │                                   Se│                               │                                   │       │                      
                     │      │                                     │                               │                                   │       │                      
                     │      │                                     │                               │──────────────────────────────╮    │       │                      
                     │      │                                     ╰───────────────────────────────╯                              │    │       │                      
                     │      │                                                  ╰─────────────────────────────────────────────────╯    │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │╭───────────────────────────────────────────────────╮╭──────────────────────────────────────────────────╮│       │                      
                     │      ││                        Add                        ││                      Cancel                      ││       │                      
                     ╰──────│╰───────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯│───────╯                      
                            ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯
